# full-stack-dev

./: .gitignore  README.md  dev-core-101-compiled-or-interpreted.md  dev-core-101-computer-specs.md  dev-core-101-exercises-python.py  dev-core-101-finalproject-plan.md  dev-core-101-finalproject.py  dev-core-101-hello-javascript.js  dev-core-101-hello-python.py  dev-core-101-industries-research.txt  dev-core-101-input-output-python.py  dev-core-101-task-js.js  dev-core-101-task-python.py  dev-core-101-variables-python.py  dev-core-101-vs-code-bindings.md  dev101  test.md
Portfolio/: index.html  styles.css
Test_Devcore105/: README.md
back-end-101/: frameworks_overview.md
back-end-101/lesson-2/: app.py  pyproject.toml
back-end-101/lesson-3/: pyproject.toml
backend-101/final-project/: README.md  main.py
backend-101/lesson-2/: .gitignore  app.py  app1.py  pyproject.toml
backend-101/lesson-3/: pyproject.toml
backend-101/lesson-5/: app.py  pyproject.toml
backend-101/lesson-6/: app.py  pyproject.toml
backend-101/lesson-7/: app.py  tasks.json
backend-101/lesson-8/: .gitignore  READMNE.md  pyproject.toml
backend-101/lesson-9/: pyproject.toml
backend-102/: pyproject.toml  task4.py  task5.py
backend/backend-101/: frameworks_overview.md
backend/backend-101/lesson-7/: READMNE.md  pyproject.toml
backend/backend-102/: .gitignore  task1.py  task3.py  task4.py  task5.py
backend/backend-102/task10/: main.py  pyproject.toml
dev-core-101/: dev-core-101-basic-syntax.py  dev-core-101-basic-terms.py  dev-core-101-compiled-or-interpreted.md  dev-core-101-exercises-js.js  dev-core-101-finalproject-plan.md  dev-core-101-finalproject.py  dev-core-101-industries-research.txt  dev-core-101-input-output-python.py  dev-core-101-programming-languages-timeline.txt  dev-core-101-task-python.py  dev-core-101-variables-js.js  dev-core-101-variables-python.py
dev-core-102/: task_2_data_structures.py  task_5_trip_advisor.py  task_6_discount_calculator.py  task_7_sports_statistics.py  user_info.json
dev-core-103/firewall_setup/: ufw_rules.txt
dev-core-103/lesson3/: tcp_client.py
dev-core-103/lesson4/: http_requests.py
dev-core-103/lesson5/: check_open_ports.py
dev-core-104/: .work_is_file.txt.swo  .work_is_file.txt.swp  commands_used.txt  env.txt  project_structure.txt  task5.txt  work_is_file.txt  work_project.txt
dev-core-106/: lesson1.md  lesson1.txt
dev-core/dev-core-101/: dev-core-101-basic-syntax.py  dev-core-101-basic-terms.py  dev-core-101-computer-specs.md  dev-core-101-exercises-js.js  dev-core-101-exercises-python.py  (+3 more)
dev-ops-101/: .bashrc.txt.swp  alty.txt  bashrc.txt  command_log.txt  dev-ops-101-intro.txt  dev-ops-101-server-ip.txt  networkin.txt  process_status.txt  reboot-ping-practice.txt  system_info.sh
front-end-101/: front-end-101_websites_research.md
mvp_project/: README.md
mvp_project/backend/: app.py  main.py  pyproject.toml  user.py  user2.py
my_backend_project/: app.py  pyproject.toml
(+97 files in other folders)
