[tool.poetry]
name = "lesson-7"
version = "0.1.0"
description = ""
authors = ["aladdin1011 <nurmakov2015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
